# headlessweb

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  FAILING_TESTS_ANALYSIS.md  FINAL_TEST_FAILURE_ANALYSIS.md  HeadlessWeb Assertion.md  HeadlessWeb Next Steps.md  HeadlessWebFileAndWorkflow.md  HeadlessWebPhase2.md  INSTALL.md  JS_DEBUG_STRATEGY.md  Makefile  Makefile.custom  QUALITY-IMPROVEMENT-PLAN.md  README.md  TESTING.md  advanced_form_analysis.xml  advanced_form_current.xml  advanced_form_fixed_results.xml  advanced_form_progress.xml  advanced_form_test_results.xml  analyze_test_coverage.sh  browser_main_debug.xml  browser_main_js_completion.xml  browser_main_timing_fixed.xml  browser_session_all_tests.xml  browser_session_custom_state_fixed.xml  cmake_install.cmake  comprehensive-test.sh  conditional_logic_test.xml  debug-script.sh  debug_all_monitoring_scripts  debug_all_monitoring_scripts.cpp  debug_all_scripts  debug_all_scripts.cpp  debug_framework_format  debug_framework_format.cpp  debug_framework_script  debug_framework_script.cpp  (+62 more)
backup_20250712_192525/: CMakeLists.txt  Makefile
backup_20250712_192525/src/: Browser.cpp  BrowserDOM.cpp  BrowserEvents.cpp  BrowserScreenshot.cpp  SessionManager.cpp  main.cpp
build_debug/: events_test_results.xml  extract_custom_test.xml  restore_session_custom_test.xml
debug/: CMakeLists.txt  debug_events_test.cpp  debug_fileops_test.cpp  debug_minimal_browser.cpp  debug_resource_management.cpp  debug_storage_test.cpp  debug_url_test.cpp  quick_fix_plan.md  search_demo_test.cpp
docs/: README.md  nodejs.md  npm-package.md  quick-reference.md
script_test/: README.md  test_advanced_browser_features.sh  test_assertions.sh  test_dom_operations.sh  test_downloads.sh  test_file_operations_integration.sh  test_file_uploads.sh  test_forms.sh  test_helpers.sh  test_javascript.sh  test_navigation.sh  test_output_configuration.sh  test_screenshot.sh  test_sessions.sh  test_storage.sh
sh_test/: README.md  analysis_tools.sh  comprehensive_test.sh  run_legacy_tests.sh  test_assertions.sh  test_helpers.sh
spec/: 100-PERCENT-SUCCESS-TECHNICAL-BLUEPRINT.md  100-percent-test-pass-blueprint.md  Browser Component Testing Blueprint.md  EVENT-DRIVEN-COMPLETION-REPORT.md  FINAL-ACHIEVEMENT-REPORT.md  HeadlessWeb Assertion.md  NODEJS-INTEGRATION-BLUEPRINT.md  Roadmap.md  TEST-VALIDITY-AUDIT-REPORT.md  Test Coverage Gap Implementation Plan.md  Test Coverage Implementation Completion Report.md  Test-Strategy.md  Test_Failures_Analysis.md  Unit Testing Implementation Status.md  architecture-overview.md  blueprint-prompt.md  debugging-findings.md  enhanced-form-interaction-guide.md  event-driven-architecture-refactor.md  headlessweb.blueprint  hweb-refactoring-blueprint.md  next-steps-plan.md  next-steps-roadmap.md  test-failure-fix-blueprint.md  test-validation-review-plan.md  troubleshooting.md  validation-summary.md
src/: Browser.cpp  Browser.h  (+11 more)
src/Browser/: AsyncDOMOperations.cpp  AsyncNavigationOperations.cpp  AsyncOperations.cpp  AsyncSessionOperations.cpp  Browser.cpp  Browser.cpp.bak  Browser.h  BrowserEventBus.cpp  BrowserEventBus.h  BrowserReadinessTracker.cpp  CMakeLists.txt  Core.cpp  DOM.cpp  EnhancedFormInteraction.cpp  EventLoopManager.cpp  EventLoopManager.h  Events.cpp  JavaScript.cpp  Makefile  MutationTracker.cpp  Screenshot.cpp  Session.cpp  Storage.cpp  Utilities.cpp  Utilities.cpp.bak  Wait.cpp  Wait_Fixed.cpp  WebKitCompat.h  cmake_install.cmake
src/hweb/: CMakeLists.txt  Config.cpp  Config.h  Makefile  Output.cpp  Output.h  Types.h  cmake_install.cmake  main.cpp
src/hweb/Commands/: Executor.cpp  Executor.h
src/hweb/Handlers/: AdvancedWait.cpp  AdvancedWait.h  BasicCommands.cpp  BasicCommands.h  FileOperations.cpp  FileOperations.h
src/hweb/Services/: ManagerRegistry.cpp  ManagerRegistry.h  NavigationService.cpp  NavigationService.h  SessionService.cpp  SessionService.h
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  browser_test_environment.cpp  browser_test_environment.h  browser_wait_results.xml  cmake_install.cmake  comprehensive_test_results.xml  debug_form_test_results.xml  dom_test_results.xml  form_test_results.xml  hweb_tests  hweb_tests[1]_include.cmake  hweb_tests[1]_tests.cmake  javascript_test_results.xml  session_results.xml  suite_management_results.xml  test_main.cpp  upload_manager_results.xml
tests/assertion/: test_assertion_integration.cpp  test_assertion_manager.cpp  test_assertion_types.cpp  test_output_formatter.cpp  test_suite_management.cpp
tests/browser/: test_browser_advanced_form_operations.cpp  test_browser_core.cpp  test_browser_dom.cpp  test_browser_dom_simple.cpp  test_browser_events.cpp  test_browser_form_operations.cpp  test_browser_javascript.cpp  test_browser_main.cpp  test_browser_screenshot.cpp  test_browser_session.cpp  test_browser_signal_safety.cpp  test_browser_storage.cpp  test_browser_utilities.cpp  test_browser_wait.cpp  test_dom_escaping_fixes.cpp  test_session_restoration_bug.cpp
tests/docs/: EVENT_DRIVEN_TESTING_GUIDE.md
tests/examples/: test_event_driven_example.cpp
tests/experimental/: test_minimal_segfault_debug.cpp
tests/fileops/: test_download_manager.cpp  test_path_utils.cpp  test_types.cpp  test_upload_manager.cpp
tests/hweb/: test_command_workflows.cpp  test_config_parser.cpp  test_manager_registry.cpp  test_navigation_service.cpp  test_output.cpp  test_service_architecture_coordination.cpp  test_session_service.cpp
tests/integration/: test_browser_fileops_integration.cpp  test_browser_fileops_integration_simple.cpp  test_complex_workflow_chains.cpp
tests/main/: test_command_parsing.cpp
tests/mocks/: mock_browser.cpp  mock_browser.h
tests/sample_html/: ecommerce_test.html  minimal_input_test.html  performance_stress_test.html
tests/session/: test_session.cpp  test_session_manager.cpp
tests/utils/: SafePageLoader.cpp  SafePageLoader.h  TestWaitUtilities.cpp  TestWaitUtilities.h  test_helpers.cpp  test_helpers.h
tests/validation/: test_performance_validation.cpp  test_spa_navigation_validation.cpp
(+125 files in other folders)
